@@ -1,3 +1,8 @@
+2009-02-06 TualatriX <tualatrix@gmail.com>
+
+	* templatetags/comment.py, views/comment.py, views/post.py: Store
+	cookie for CommentForm.
+
 2009-02-05 TualatriX <tualatrix@gmail.com>
 
 	* templates/menu.html, views/favourites.py: Menu and Favourite not
